--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -66,7 +66,7 @@
         <div *ngIf="collectionData">
             <div class = "incident-item" *ngFor="let incident of collectionData" (click)="openPreview(incident)" (mouseenter)="onPanelMouseEnter(incident)" (mouseleave)="onPanelMouseExit(incident)">
               <mat-progress-bar [id]="incident.incidentName" mode="determinate" [value]="progressValues.get(incident.incidentName)"></mat-progress-bar>
-              <div class="item-header" style="color: #1a5a96">{{incident.incidentName}} 
+              <div class="item-header" style="color: #1a5a96">{{incident.incidentName}}
                 <span #el style="cursor: pointer;" (click)="onWatchlist(incident) ? removeFromWatchlist(incident) : addToWatchlist(incident)" (click)="onClickBookmark($event)">
                     <mat-icon style="color:#1A5A96; vertical-align: middle;">{{onWatchlist(incident) ? 'bookmark' : 'bookmark_border'}}</mat-icon>
                 </span>
@@ -84,7 +84,7 @@
                     <span class="item-content">{{calculateDistance(Number(incident.latitude), Number(incident.longitude))}} km</span>
                 </div>
                 <div class="tags">
-                    <span *ngIf="incident.fireOfNoteInd.trim().toUpperCase() === 'T'" class="wildifre-of-note-tag">
+                    <span *ngIf="incident.fireOfNoteInd" class="wildifre-of-note-tag">
                         <mat-icon class="fire-icon" style="vertical-align:middle">local_fire_department</mat-icon>
                         Wildfire of Note
                     </span>
