--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="item-row">
                     <span class="item-title">Fire Centre: </span>
-                    <span class="item-content">{{incident.fireCentre}}</span>
+                    <span class="item-content">{{convertToFireCentreDescription(incident.fireCentre)}}</span>
                 </div>
                 <div class="item-row">
                     <span class="item-title">Distance from My Location: </span>
