--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.scss
@@ -3,6 +3,9 @@
   overflow: hidden;
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   padding: 20px;
+  background-color: white;
+  max-width: 1300px;
+  margin: auto;
 }
 
 .header-row {
