--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -2,7 +2,24 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
-::ng-deep .wildfires-tabs {
+:host ::ng-deep .mat-tab-label {
+  color: #003366 !important;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.learn-more-button {
+  padding: 8px;
+  border: 1px solid #1a5a96;
+  border-radius: 5px;
+  color: white;
+  background-color: #1a5a96;
+  font-size: 14px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+/*::ng-deep .wildfires-tabs {
   .mat-tab-labels {
       padding-bottom: 5px;
   }
@@ -30,7 +47,8 @@
   .mat-ink-bar{
       background-color: white !important
   }
-}
+}*/
+/* Keeping in case we want the button style again */
 
 mat-tab-group {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
@@ -82,7 +100,7 @@ mat-tab-group {
   width: 100%;
 }
 .summary-container> * {
-  flex: 1 1 20vw;
+  flex: 1 1 21vw;
   margin: 8px;
 }
 
@@ -169,6 +187,8 @@ mat-tab-group {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
+  border-bottom: 1px solid #e9eff5;
+  padding-bottom: 20px;
   .info-text {
     padding: 5px;
     width: 45%;
@@ -180,5 +200,5 @@ mat-tab-group {
   }
 }
 .info-panel> * {
-  flex: 1 1 45vw;
+  flex: 1 1 40vw;
 }
