--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
@@ -8,7 +8,7 @@
             <mat-select appWFSingleSelect appWFPlaceholder="Select..."
                         aria-label="Type" [options]="mediaTypeOptions"
                         [value]="currentMediaType"
-                        style="border: 1px solid;border-radius: 4px;width: 10%;border-color: gray;">
+                        style="border: 1px solid;border-radius: 4px;width: 10%;border-color: gray;padding-left: 10px; margin: 10px 0 10px 0;">
                 <mat-option value="">
                     <span class="placeholder">Select...</span>
                 </mat-option>
@@ -17,42 +17,32 @@
                 </mat-option>
             </mat-select>
         </div>
-        
             <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide">
-                <div class="content-panel-stack">
-                    <div *ngFor="let item of imagesAndVideosStub">
-                        <a data-lg-size="376-383" class="gallery-item"
-                            data-src="https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan"
-                            data-responsive="{{item.href}}"
-                            data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@entrycube' >Diego Guzmán </a></h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
-                                <div class="image-video-container">
-                                    <div class="image-video-details">
-                                        <div style="padding-bottom: 5px;">{{item.title}}</div>
-                                        <div style="font-size:14px">
-                                            <div style="padding-bottom: 5px;">
-                                                Date Uploaded: <span style="font-weight: 700;">{{item.uploadedDate}}</span>
-                                            </div>
-                                            <div>
-                                                Filename: <span style="font-weight: 700;">{{item.fileName}}</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div style="display: flex;">
-                                        <img *ngIf="item.type=='image'" class="incident-image img-responsive" src="{{item.href}}" />
-                                        <iframe *ngIf="item.type=='video'" id="player" type="text/html" width="640" height="390"
-                                        src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-                                        frameborder="0"></iframe>
-                                    </div>
+                <a *ngFor="let item of imagesAndVideosStub"
+                    [attr.data-src]="item.href"
+                    [attr.data-responsive]="item.href"
+                    data-lg-size="376-383"
+                    class="gallery-item">
+                    <div class="image-video-container">
+                        <div class="image-video-details">
+                            <div style="padding-bottom: 5px;">{{item.title}}</div>
+                            <div style="font-size:14px">
+                                <div style="padding-bottom: 5px;">
+                                    Date Uploaded: <span style="font-weight: 700;">{{item.uploadedDate}}</span>
                                 </div>
-                            </a>        
+                                <div>
+                                    Filename: <span style="font-weight: 700;">{{item.fileName}}</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div style="display: flex;">
+                            <img *ngIf="item.type=='image'" class="incident-image img-responsive" src="{{item.href}}" />
+                            <iframe *ngIf="item.type=='video'" id="player" type="text/html" width="640" height="390"
+                            src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
+                            frameborder="0"></iframe>
+                        </div>
                     </div>
-                
-                 </div>
+                </a>     
             </lightgallery>
-        
       </div>
 </div>
- <!-- <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-        -->
