--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
@@ -37,8 +37,8 @@
                             </div>
                         </div>
                         <div style="display: flex;">
-                            <img *ngIf="item.type=='image'" class="incident-image img-responsive" src="{{item.href}}" />
-                            <iframe *ngIf="item.type=='video'" id="player" type="text/html" width="640" height="270" [src]="item.href | safe" frameborder="0"></iframe>
+                            <img *ngIf="item.type=='image'" class="incident-image img-responsive" src="{{item.href}}" alt="{{item.title}}"/>
+                            <iframe title="{{item.title}}" *ngIf="item.type=='video'" id="player" type="text/html" width="640" height="270" [src]="item.href | safe"></iframe>
                         </div>
                     </div>
                 </a>     
