copy the old branch

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -65,7 +65,7 @@
     <image-gallery-panel [incident]="currentAdminIncident"></image-gallery-panel>
   </mat-tab>
   <mat-tab label="Video Gallery">
-    
+    <video-gallery-panel [incident]="currentAdminIncident"></video-gallery-panel>
   </mat-tab>
   <mat-tab label="Maps">
     <maps-panel [incident]="currentAdminIncident"></maps-panel>
