--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
@@ -1,6 +1,6 @@
 .image-panel {
   display: flex;
-  padding: 0 1rem;
+  padding: 1rem;
   width: 650px;
   margin: 0 1rem;
 
@@ -9,8 +9,8 @@
     height: 250px;
 
     img {
-      max-width: 350px;
-      height: inherit;
+      width: calc(100% - 15px);
+      height: 100%;
       object-fit: cover;
       border-radius: 10px;
     }
@@ -20,6 +20,9 @@
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
     padding: 5px;
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 
     .row {
       white-space: nowrap;
